...
        "first_word": MessageLookupByLibrary.simpleMessage("First Word"),
        "friend": MessageLookupByLibrary.simpleMessage("Friend"),
        "friend_word": MessageLookupByLibrary.simpleMessage("Friend Word"),
        "friends": MessageLookupByLibrary.simpleMessage("Friends"),
        "frog": MessageLookupByLibrary.simpleMessage("frog"),
        "gallery": MessageLookupByLibrary.simpleMessage("Gallery"),
        "game": MessageLookupByLibrary.simpleMessage("Game"),
        "gameOver": MessageLookupByLibrary.simpleMessage("Game Over"),
        "games": MessageLookupByLibrary.simpleMessage("Games"),
        "giraffe": MessageLookupByLibrary.simpleMessage("giraffe"),
        "glasses": MessageLookupByLibrary.simpleMessage("glasses"),
        "grapes": MessageLookupByLibrary.simpleMessage("grapes"),
        "grass": MessageLookupByLibrary.simpleMessage("grass"),
...
        "letUsLearn": MessageLookupByLibrary.simpleMessage("Let us learn"),
        "loading": MessageLookupByLibrary.simpleMessage("Loading..."),
        "lotus": MessageLookupByLibrary.simpleMessage("lotus"),
        "mango": MessageLookupByLibrary.simpleMessage("mango"),
        "maroon": MessageLookupByLibrary.simpleMessage("maroon"),
        "match_the_following": MessageLookupByLibrary.simpleMessage("Match"),
        "memory": MessageLookupByLibrary.simpleMessage("Memory"),
        "microwave_oven":
            MessageLookupByLibrary.simpleMessage("microwave oven"),
        "monkey": MessageLookupByLibrary.simpleMessage("monkey"),
        "mother": MessageLookupByLibrary.simpleMessage("Mother"),
        "next": MessageLookupByLibrary.simpleMessage("Next"),
        "ok": MessageLookupByLibrary.simpleMessage("OK"),
...
