...
import 'package:shared_preferences/shared_preferences.dart';
import 'package:uuid/uuid.dart';

enum GameMode { timed, iterations }

enum GameDisplay {
  single,
  myHeadToHead,
  otherHeadToHead,
  localTurnByTurn,
  networkTurnByTurn
}

...
