...
        .then((gameCategories) async {
      if (gameCategories.isEmpty) {
        if (widget.game == "identify") {
          gameCategories = <Tuple4<int, int, String, int>>[
            new Tuple4<int, int, String, int>(1, 1, 'Modes', 1),
          ];
        } else if (widget.game == "drawing") {
          gameCategories = <Tuple4<int, int, String, int>>[
            new Tuple4<int, int, String, int>(2, 1, 'Draw', 1)
          ];
        } else {
          gameCategories = <Tuple4<int, int, String, int>>[
            new Tuple4<int, int, String, int>(1, 1, 'Todo Placeholder', 1)
          ];
        }
        //   gameCategories = <Tuple2<int, String>>[
        //   new Tuple2<int, String>(1, 'Todo Placeholder')
        // ];
      }
...
