...
                      fit: BoxFit.fill,
                      child: new Container(
                        width: constraints.maxWidth, height: constraints.maxHeight * 0.7,

                        // otherwise the logo will be tiny
                        child: new MyDrawPage(_padController,_maxSize),
                        key: new Key('draw_screen'),
                      ),
                    ),

                     new Container(
                        width: constraints.maxWidth, height: constraints.maxHeight * 0.1,
                        child: new Row(
...
                        width: constraints.maxWidth * 0.5,
                        height: constraints.maxHeight * 0.18),
    
                    new Container(
                        width: constraints.maxWidth, height: constraints.maxHeight * 0.08,
                        child: new Text("APPLE",
                            key: new Key('imgtext'),
                            textAlign: TextAlign.center,
                            style:
                            new TextStyle(
                                fontSize: constraints.maxHeight * 0.05,
                                fontWeight: FontWeight.bold))
                    ),
...
