...
  Tuple2('reflex', 'Reflex'),
  Tuple2('order_it', 'Order It'),
  Tuple2('memory', 'Memory'),
  Tuple2('drawing', 'drawing'),
  Tuple2('fill_in_the_blanks', 'Fill In The Blanks'),
  Tuple2('calculate_numbers', 'Calculate'),
  Tuple2('casino', 'Casino'),
  Tuple2('match_the_following', 'Match'),
  Tuple2('bingo', 'Bingo'),
  Tuple2('true_or_false', 'True Or False'),
  Tuple2('tables', 'Tables'),
  Tuple2('identify', 'identify'),
  Tuple2('fill_number', 'Fill Number'),
...
      appBar: AppBar(
        title: Text(Loca.of(context).games),
      ),
      body: Container(
        color: Color(0xFFFFFFFF),
        child: new GridView.count(
          key: new Key('Game_page'),
          primary: true,
//          padding: const EdgeInsets.all(.0),
          crossAxisSpacing: 12.0,
          mainAxisSpacing: 12.0,
          crossAxisCount: media.size.height > media.size.width ? 3 : 4,
          children: gameNames
...
