...
    }
  }

  void _initFillBlanks() async {
    count = 0;
    progres = 0;
    fruit = ' ';
    dragcount = 0;
    space = 0;
    setState(() => _isLoading = true);
    _fillData = await fetchWordWithBlanksData(widget.gameCategoryId);
    dragBoxData = _fillData.map((f) {
      return f.item2;
...
